--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^4.0.0",
-        "autoprefixer": "^10.4.12",
+        "autoprefixer": "^10.4.17",
         "axios": "^1.6.2",
+        "flowbite": "^2.3.0",
         "laravel-vite-plugin": "^0.8.0",
-        "postcss": "^8.4.18",
-        "tailwindcss": "^3.2.1",
+        "postcss": "^8.4.35",
+        "tailwindcss": "^3.4.1",
         "vite": "^4.0.0",
         "vue": "^3.2.41"
     },
@@ -21,6 +22,7 @@
         "@ckeditor/ckeditor5-build-classic": "^40.1.0",
         "@ckeditor/ckeditor5-vue": "^5.1.0",
         "@headlessui/vue": "^1.7.16",
-        "@heroicons/vue": "^2.0.18"
+        "@heroicons/vue": "^2.0.18",
+        "tailwind-scrollbar-hide": "^1.1.7"
     }
 }
