--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@ckeditor/ckeditor5-vue": "^5.1.0",
         "@headlessui/vue": "^1.7.16",
         "@heroicons/vue": "^2.0.18",
+        "swiper": "^11.0.7",
         "tailwind-scrollbar-hide": "^1.1.7"
     }
 }
